--- a/index.html
+++ b/index.html
@@ -27,21 +27,19 @@
           <li><a id="menu_about" href="#about" class="dropdown-item">ABOUT</a></li>
           <li><a id="menu_skills" href="#skills" class="dropdown-item">SKILLS</a></li>
           <li><a id="menu_portfolio" href="#portfolio" class="dropdown-item">PORTFOLIO</a></li>
+          <li class="nav-item">
+            <button id="btn-en" onclick="changeLanguage('en')" class="btn btn-light rounded-circle">
+              🇬🇧
+            </button>
+          </li>
+          <li class="nav-item">
+            <button id="btn-uk" onclick="changeLanguage('uk')" class="btn btn-light rounded-circle">
+              🇺🇦
+            </button>
+          </li>
         </ul>
-      </li>
-    
-      <li class="nav-item">
-        <button id="btn-en" onclick="changeLanguage('en')" class="btn btn-light rounded-circle">
-          🇬🇧
-        </button>
-      </li>
-      <li class="nav-item">
-        <button id="btn-uk" onclick="changeLanguage('uk')" class="btn btn-light rounded-circle">
-          🇺🇦
-        </button>
-      </li>
+      </li> 
     </ul>
-    
   </nav>
 
   <div id="content"> 
@@ -76,6 +74,7 @@
   <script src="js/matrixBackground.js"></script>
   <script src="js/sections.js"></script>
   <script src="js/changeLanguage.js"></script>
+  <script src="js/showHideResume.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
           integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
           crossorigin="anonymous">
