--- a/sections/about.html
+++ b/sections/about.html
@@ -5,7 +5,14 @@
           <div class="col-md-4">
             <img src="images/ava2.jpg" class="img-fluid border border-white border-3" alt="Image">
           </div>
-          <div class="col-md-8">
+          
+          <div>
+            <button id="toggle-button" onclick="showHideResume()" class="btn btn-primary m-2">
+              Hide Resume
+            </button>
+          </div>
+
+          <div id="resume" class="col-md-8">
             <div class="card-body text-primary fw-bold">
               <h3 id="title_about" class="card-title text-center mt-5">
                 Short Resume
